2010-03-19  Colin Watson  <cjwatson@ubuntu.com>

	* .bzrignore: Add gentrigtables, grub-script-check,
	grub_script_check_init.c, grub_script_check_init.h, and
	trigtables.c.

2010-03-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* kern/parser.c: Indented.

2010-03-17  Vladimir Serbinenko  <phcoder@gmail.com>

	* term/i386/pc/vesafb.c: Removed (orphaned, deprecated and broken).

2010-03-17  Vladimir Serbinenko  <phcoder@gmail.com>

	* video/fb/fbblit.c (grub_video_fbblit_blend_XXXA8888_1bit): Handle
	alpha_mask_size == 0 case.

2010-03-14  BVK Chaitanya  <bvk.groups@gmail.com>

	GRUB shell lexer and parser improvements.

	* conf/any-emu.rmk: Build rule updates.
	* conf/common.rmk: Likewise.
	* conf/i386-coreboot.rmk: Likewise.
	* conf/i386-efi.rmk: Likewise.
	* conf/i386-ieee1275.rmk: Likewise.
	* conf/i386-pc.rmk: Likewise.
	* conf/powerpc-ieee1275.rmk: Likewise.
	* conf/x86_64-efi.rmk: Likewise.

	* configure.ac: Configure check for flex.

	* include/grub/script_sh.h (grub_script_arg_type_t): More argument
	types.
	(grub_lexer_param): Struct member updates.
	(grub_parser_param): Likewise.
	(GRUB_LEXER_TOKEN_MAX): Maximum token size.
	(GRUB_LEXER_RECORD_INCREMENT): Memory increments' size.
	(grub_script_lexer_init): Prototype update.
	(grub_script_lexer_record_start): Likewise.
	(grub_script_lexer_record_stop): Likewise.
	(grub_script_lexer_yywrap): New function prototype.
	(grub_script_lexer_fini): Likewise.
	(grub_script_execute_argument_to_string): Removed by...
	(grub_script_execute_argument_to_argv): ...better version.

	* script/execute.c (ROUND_UPTO): New macro.
	(grub_script_execute_cmdline): Out of memory fixes.
	(grub_script_execute_menuentry): Likewise.
	(grub_script_execute_argument_to_string): Removed. Update all
	users by...
	(grub_script_execute_argument_to_argv): ...better version.
	* script/function.c (grub_script_function_create): Use
	grub_script_execute_argument_to_argv instead of
	grub_script_execute_argument_to_string.
