@@ -1,3 +1,9 @@
+2010-03-21  Colin Watson  <cjwatson@ubuntu.com>
+
+	* util/grub-install.in: Copy .mo files from @datadir@/locale, to
+	match where 'make install' puts them.
+	* util/i386/efi/grub-install.in: Likewise.
+
 2010-03-19  Colin Watson  <cjwatson@ubuntu.com>
 
 	* .bzrignore: Add gentrigtables, grub-script-check,
